--- a/backend-api/src/views/anhminh.ejs
+++ b/backend-api/src/views/anhminh.ejs
@@ -6,5 +6,12 @@
 </head>
 <body>
     <div>anh mnih dep trai nhat qua dat </div>
+    <div>
+        <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="news.asp">News</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+      </ul></div>
 </body>
 </html>
